funcioona EF pero no la API ..obtienen un tenanId 0 ..!! en un usuario registrado !!

--- a/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Cultures/CultureSelector.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Cultures/CultureSelector.razor
@@ -57,7 +57,7 @@
         var cultureEscaped = Uri.EscapeDataString(_culture.Name);
         var uriEscaped = Uri.EscapeDataString(uri);
 
-        if (ContextProvider.IsValid())
+        if (ContextProvider.IsValidState(StorageKeys.ServerState))
         {
             Navigation.NavigateTo($"Culture/Set?culture={cultureEscaped}&redirectUri={uriEscaped}", forceLoad: true);
             //await ContextProvider.ReadAllContext(true);
