--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
@@ -171,7 +171,7 @@
 
     private async Task createContext()
     {
-        await ContextProvider.ReadAllContext(true);
+        await ContextProvider.ReadStates();
 
         var appUser = await UserManager.FindByEmailAsync(Input.Email);
         var userClaims = await UserManager.GetClaimsAsync(appUser);
